--- a/index.html
+++ b/index.html
@@ -9,11 +9,15 @@
 </head>
 <body>
     <h1 class="header--main">Discover hidden places in the world around you</h1>
-    <p><a href="" class="link--cta" >Download Excursion (Coming Soon!)</a></p>
+    <p><a href="#" class="link--cta" >Download Excursion (Coming Soon!)</a></p>
     <video autoplay loop>
         <source src="resources/videos/excursion-video.mp4" type="video/mp4">
     </video>
     <h2 class="header--secondary">Your personal travel guide</h2>
     <h4 class="header--sub-header">Excursion remembers places you like, and recommends new points of interest around you.</h4>
+    <p><img src="resources/images/excursion-photo.jpeg"></p>
+    <p><img src="resources/images/excursion-phone.png"></p>
+    <h4 class="header--sub-header">Coming Soon for iPhone and Android</h4>
+    <p><a href="#" class="link--cta" >Download Excursion (Coming Soon!)</a></p>
 </body>
 </html>
